[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata ─────────────────────────────────────────────────────────

[project]
name        = "waveshare-p2plib"
version     = "0.1.0"
description = "Peer-to-peer file transfer over BLE discovery + TCP stream."
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
    { name = "Chinemerem Madu", email = "your-email@example.com" },
]

keywords = ["p2p", "bluetooth", "ble", "file-transfer", "asyncio", "networking"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: File Sharing",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

# Core runtime dependencies
dependencies = [
    "tqdm>=4.65",
]

[project.optional-dependencies]
# BLE peer discovery — requires a system Bluetooth adapter
ble  = ["bleak>=0.21"]
# Developer tooling
dev  = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage      = "https://github.com/Clarence6174/waveshare"
Documentation = "https://github.com"
Repository    = "https://github.com/Clarence6174/waveshare"
"Bug Tracker" = "https://github.com/Clarence6174/waveshare/issues"
Changelog     = "https://github.com/Clarence6174/waveshare/blob/main/CHANGELOG.md"

# ── Hatch configuration ──────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["waveshare"]

[tool.hatch.envs.default]
features = ["ble", "dev"]

[tool.hatch.envs.default.scripts]
test  = "pytest tests/ -v --cov=waveshare --cov-report=term-missing {args}"
lint  = "ruff check waveshare/ tests/"
fmt   = "ruff format waveshare/ tests/"
types = "mypy waveshare"

# ── Tool configurations ──────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-ra -q"

[tool.ruff]
line-length    = 99
target-version = "py310"
src = ["waveshare"]
select         = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["waveshare"]

[tool.coverage.report]
show_missing = true
skip_covered = false
